...
          </Button>
          <Button variant="outline" className="mb-2" onPress={handlePayoutSettings}>
            <Text>Payout settings</Text>
            <LineIcon name="dollar-circle" size={20} className="text-foreground" />
          </Button>
          <Button onPress={handleLogout}>
            <Text>Logout</Text>
            <LineIcon name="arrow-out-left-square-half" size={20} className="text-primary-foreground" />
          </Button>
        </View>
        <View className="border-b border-border p-4">
          <Text className="mb-2 font-sans text-lg text-foreground">Danger Zone</Text>
          <Text className="mb-4 text-sm text-muted-foreground">
...
            tabBarLabelStyle,
          }}
        >
          <Tabs.Screen
            name="dashboard"
            options={{
              title: "Dashboard",
              headerLeft: () => <LogoIcon />,
              headerRight: () => <DashboardHeaderRight />,
              tabBarIcon: ({ color, size }) => <SolidIcon name="home-alt-2" size={size} color={color} />,
            }}
          />
          <Tabs.Screen
            name="products"
            options={{
              title: "Products",
              headerLeft: () => <LogoIcon />,
              headerRight: () => <ProductsHeaderRight />,
              tabBarIcon: ({ color, size }) => <SolidIcon name="package" size={size} color={color} />,
            }}
          />
          <Tabs.Screen
...
              tabBarIcon: ({ color, size }) => <SolidIcon name="message-bubble-dots" size={size} color={color} />,
            }}
          />
          <Tabs.Screen
            name="library"
            options={{
              title: "Library",
              headerLeft: () => <LogoIcon />,
              headerRight: () => <LibraryHeaderRight />,
              tabBarIcon: ({ color, size }) => <SolidIcon name="bookmark-heart" size={size} color={color} />,
            }}
          />
        </Tabs>
...
